Closed Bug 1531500 Opened 6 years ago Closed 6 years ago

Distorted/slowed-down audio with HE-AAC streams

Categories

(Core :: Audio/Video: Playback, defect)

67 Branch
Unspecified
Windows
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla67
Tracking Status
firefox-esr60 --- unaffected
firefox65 --- unaffected
firefox66 --- unaffected
firefox67 --- verified
firefox68 --- verified

People

(Reporter: philipp, Assigned: jya)

References

Details

(Keywords: regression)

Attachments

(1 file)

str on win10 64bit:

this regressed on 67.0a1 in this range: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=198cd4a81bf2afa7cc79360f90da7bc91218b76d&tochange=fd53d5e80bca0316495a677b4155dabb1b771569

i'm getting errors in mozregression when trying to narrow it down more closely, but manually testing a few builds on autoland i think the issue has been introduced with the patches from bug 1530234.

Flags: needinfo?(jyavenard)

a friend tested on ubuntu where these steps didn't reproduce.

OS: Unspecified → Windows
Assignee: nobody → jyavenard
Flags: needinfo?(jyavenard)

That sounds very funny :)

Summary: Distorted/slowed-down audio during video playback → Distorted/slowed-down audio with HE-AAC streams

i also get the same problem on https://www.essendonfc.com.au/

The rate changes after decoding the first sample to what was indicated in the container. The code to handle that case was incorrectly removed in bug 1530234

Same here when playing video on Facebook.

Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla67

I just tested with 03-01 Nightly build 20190301201651 and the amazon prime video playsback as expected. Yay!

I managed to reproduce the issue using an older version of Nightly from 2019-02-28 on Windows 10 x64.
I retested everything using latest Nightly 68.0a1 and beta 67.0b8 on Windows 10 x64, Ubuntu 18.04 x64 and macOS 10.13. The bug is not reproducing anymore.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: