Bug 1531500 - Fix HE-AAC with WMF decoder. r=cpearce

The rate changes after decoding the first sample to what was indicated in the container. The code to handle that case was incorrectly removed in bug  1530234

Differential Revision: https://phabricator.services.mozilla.com/D21618